# sis-inventory-diff-app

./: .gitignore  README.md  environment.yml  pyproject.toml  snowflake.yml
app/: streamlit_app.py
data/: inventory_snapshot_seed.csv  physical_inventory_counts_upload.csv  physical_inventory_counts_upload.xlsx
sql/: init.sql
